--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/node": "^9.0.2",
     "@astrojs/react": "^3.6.3",
     "astro": "^5.1.8",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "marked": "^15.0.6",
     "pg": "^8.13.1",
