--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "marked": "^15.0.6",
     "pg": "^8.13.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.5",
