--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@astrojs/node": "^9.0.2",
     "@astrojs/react": "^3.6.3",
+    "@radix-ui/react-popover": "^1.1.5",
     "astro": "^5.1.8",
+    "date-fns": "^4.1.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "marked": "^15.0.6",
