--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-popover": "^1.1.5",
     "astro": "^5.1.8",
     "date-fns": "^4.1.0",
+    "highlight.js": "^11.11.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "marked": "^15.0.6",
